more tests (including CircuitBreakerEndpointRouteProcessorTest), more refactoring (including the addition of AbstractFilteringEndpointCollector), more Javadocs